--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "latchql",
   "version": "1.0.0",
   "description": "a one stop shop for securing a graphQL API",
-  "type" : "module",
+  "type": "module",
   "main": "lib/server.js",
   "scripts": {
     "build": "tsc",
@@ -43,6 +43,7 @@
     "@graphql-tools/schema": "^9.0.4",
     "apollo-server-express": "^3.10.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.5",
     "fakebase": "^0.3.0",
