combined middleware funcs to one wrapper. WIP: custom error handling on exceeded limit

--- a/latch_config.json
+++ b/latch_config.json
@@ -1,12 +1,7 @@
 {
-    "admin" : {
-        "depthLimit" : [Infinity],
-        "rateLimit" : [Inifinity],
-        "costLimit" : [Inifinity]
-    },
-    "user" : {
-        "depthLimit" : [4],
-        "rateLimit" : [5000],
-        "costLimit" : [1000]
-    }    
+  "admin": {
+    "depthLimit": "10",
+    "rateLimit": "750",
+    "costLimit": "2"
+  }
 }
