NPM Module: JWTS working and dummy authorization is built in

--- a/NPM-MODULE/latch_config.json
+++ b/NPM-MODULE/latch_config.json
@@ -13,5 +13,10 @@
     "depthLimit": "1",
     "rateLimit": "500",
     "costLimit": "1"
+  },
+  "non-user" : {
+    "depthLimit": "0",
+    "rateLimit": "0",
+    "costLimit": "0"
   }
 }
