--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -53,6 +53,7 @@
     "graphql": "^15.8.0",
     "graphql-middleware": "^6.1.33",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "redis": "^4.3.1",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
