--- a/PLAYGROUND/package.json
+++ b/PLAYGROUND/package.json
@@ -20,7 +20,9 @@
     "@types/react": "^18.0.22",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
