--- a/PLAYGROUND/tsconfig.json
+++ b/PLAYGROUND/tsconfig.json
@@ -98,10 +98,11 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "jsx": "react",
-    "sourceMap": true
+    "sourceMap": true,
+    "typeRoots": ["node_modules/@types", "src/types"]
   },
   "include": ["client", "server"],
-  "exclude" : ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
