--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "run-s kill-redis start-redis backend",
-    "backend": "ttab -t 'Running server' nodemon lib/server.js",
+    "backend": "ttab -t 'Running server' node lib/server.js",
     "kill-redis": "ttab -t 'Killing preexisting redis server' killall redis-server",
     "start-redis": "ttab -t 'Running redis server' redis-server",
     "dev": "NODE_ENV=development nodemon lib/server.js"
@@ -54,12 +54,12 @@
     "express": "^4.18.2",
     "express-jwt": "^7.7.5",
     "fakebase": "^0.3.0",
-    "graphql": "^15.8.0",
+    "graphql": "^15.8.",
     "graphql-middleware": "^6.1.33",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "process": "^0.11.10",
-    "redis": "^4.3.1",
+    "redis-server": "^1.2.2",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   }
