--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -54,11 +54,13 @@
     "express": "^4.18.2",
     "express-jwt": "^7.7.5",
     "fakebase": "^0.3.0",
-    "graphql": "^15.8.",
+    "graphql": "^15.8.0",
     "graphql-middleware": "^6.1.33",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "monaco-editor": "^0.34.1",
     "process": "^0.11.10",
+    "redis": "^4.3.1",
     "redis-server": "^1.2.2",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
