--- a/PLAYGROUND/package.json
+++ b/PLAYGROUND/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-prettier-parser": "^0.10.8",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "@monaco-editor/react": "^3.7.5",
+    "@types/prettier": "^2.6.4",
     "@types/react": "^18.0.22",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
@@ -34,6 +38,7 @@
     "tailwindcss": "^3.2.1",
     "ts-loader": "^9.4.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "monaco-editor": "^0.21.3"
   }
 }
