--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -52,6 +52,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "express-jwt": "^7.7.5",
     "fakebase": "^0.3.0",
     "graphql": "^15.8.0",
