made presets read from config dynamically

--- a/NPM-MODULE/latch_config.json
+++ b/NPM-MODULE/latch_config.json
@@ -13,5 +13,10 @@
     "depthLimit": "0",
     "rateLimit": "0",
     "costLimit": "0"
+  },
+  "Celine-Machine": {
+    "depthLimit": "999",
+    "rateLimit": "999",
+    "costLimit": "999"
   }
 }
