--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -37,8 +37,10 @@
   "homepage": "https://github.com/mcphail-alex/LatchQL#readme",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.1",
     "@types/node": "^16.11.68",
     "body-parser": "^1.20.1",
+    "jest": "^29.2.2",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
