--- a/NPM-MODULE/tsconfig.json
+++ b/NPM-MODULE/tsconfig.json
@@ -12,7 +12,8 @@
     "sourceMap": true,
     "paths": {
       "*": ["/node_modules/*"]
-    }
+    },
   },
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
