--- a/PLAYGROUND/package.json
+++ b/PLAYGROUND/package.json
@@ -11,7 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "babel-prettier-parser": "^0.10.8",
+    "express-http-proxy": "^1.6.3",
+    "framer-motion": "^7.6.4",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
@@ -19,7 +24,7 @@
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
-    "@monaco-editor/react": "^3.7.5",
+    "@monaco-editor/react": "^4.4.6",
     "@types/prettier": "^2.6.4",
     "@types/react": "^18.0.22",
     "autoprefixer": "^10.4.12",
@@ -28,6 +33,7 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "monaco-editor": "^0.34.1",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
     "postcss-cli": "^10.0.0",
@@ -38,7 +44,6 @@
     "tailwindcss": "^3.2.1",
     "ts-loader": "^9.4.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "monaco-editor": "^0.21.3"
+    "webpack-dev-server": "^4.11.1"
   }
 }
