progress but no success

--- a/NPM-MODULE/tsconfig.json
+++ b/NPM-MODULE/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "*": ["/node_modules/*"]
     },
+    "allowJs": true
   },
   "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules", "**/__tests__/*"]
