--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -11,7 +11,8 @@
     "backend": "ttab -t 'Running server' node lib/server.js",
     "kill-redis": "ttab -t 'Killing preexisting redis server' killall redis-server",
     "start-redis": "ttab -t 'Running redis server' redis-server",
-    "dev": "NODE_ENV=development nodemon lib/server.js"
+    "dev": "NODE_ENV=development nodemon lib/server.js",
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -36,13 +37,18 @@
   },
   "homepage": "https://github.com/mcphail-alex/LatchQL#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.1",
     "@types/node": "^16.11.68",
+    "babel-jest": "^29.2.2",
     "body-parser": "^1.20.1",
     "jest": "^29.2.2",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ttab": "^0.7.3"
   },
@@ -67,5 +73,8 @@
     "redis-server": "^1.2.2",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
+  },
+  "transform": {
+    "^.+\\.(t|j)sx?$": "ts-jest"
   }
 }
