--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -68,6 +68,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "monaco-editor": "^0.34.1",
+    "path": "^0.12.7",
     "process": "^0.11.10",
     "redis": "^4.3.1",
     "redis-server": "^1.2.2",
