--- a/NPM-MODULE/tsconfig.json
+++ b/NPM-MODULE/tsconfig.json
@@ -14,7 +14,7 @@
     "paths": {
       "*": ["/node_modules/*"]
     },
-    "allowJs": true,
+    // "allowJs": true,
     "forceConsistentCasingInFileNames": true,
   },
   "include": ["src/**/*", "**/__tests__/*"],
