--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "a one stop shop for securing a graphQL API",
   "type": "module",
-  "main": "lib/server.js",
+  "main": "lib/src/server.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "prestart": "npm run build",
     "start": "run-s kill-redis start-redis backend",
-    "backend": "ttab -t 'Running server' node lib/server.js",
+    "backend": "ttab -t 'Running server' node lib/src/server.js",
     "kill-redis": "ttab -t 'Killing preexisting redis server' killall redis-server",
     "start-redis": "ttab -t 'Running redis server' redis-server",
     "dev": "NODE_ENV=development nodemon lib/server.js",
