limiter tests working

--- a/NPM-MODULE/package.json
+++ b/NPM-MODULE/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "a one stop shop for securing a graphQL API",
   "type": "module",
-  "main": "lib/src/server.js",
+  "main": "lib/server.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "prestart": "npm run build",
     "start": "run-s kill-redis start-redis backend",
-    "backend": "ttab -t 'Running server' node lib/src/server.js",
+    "backend": "ttab -t 'Running server' node lib/server.js",
     "kill-redis": "ttab -t 'Killing preexisting redis server' killall redis-server",
     "start-redis": "ttab -t 'Running redis server' redis-server",
     "dev": "NODE_ENV=development nodemon lib/server.js",
@@ -48,6 +48,7 @@
     "jest": "^29.2.2",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
+    "redis-mock": "^0.56.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ttab": "^0.7.3"
@@ -64,6 +65,7 @@
     "express-http-proxy": "^1.6.3",
     "express-jwt": "^7.7.5",
     "fakebase": "^0.3.0",
+    "fs": "^0.0.1-security",
     "graphql": "^15.8.0",
     "graphql-middleware": "^6.1.33",
     "jsonwebtoken": "^8.5.1",
