--- a/NPM-MODULE/tsconfig.json
+++ b/NPM-MODULE/tsconfig.json
@@ -17,6 +17,6 @@
     // "allowJs": true,
     "forceConsistentCasingInFileNames": true,
   },
-  "include": ["src/**/*", "**/__tests__/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
