--- a/PLAYGROUND/package.json
+++ b/PLAYGROUND/package.json
@@ -5,6 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
+    "test": "jest --verbose",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development nodemon server/server.js & NODE_ENV=development webpack serve --open"
   },
@@ -14,10 +15,14 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@jest/globals": "^29.2.2",
+    "@types/jest-environment-puppeteer": "^5.0.3",
     "babel-prettier-parser": "^0.10.8",
     "express-http-proxy": "^1.6.3",
     "framer-motion": "^7.6.4",
+    "jest-puppeteer": "^6.1.1",
     "prettier": "^2.7.1",
+    "puppeteer": "^19.2.2",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
@@ -26,6 +31,7 @@
     "@babel/preset-react": "^7.18.6",
     "@monaco-editor/react": "^4.4.6",
     "@types/prettier": "^2.6.4",
+    "@types/puppeteer": "^7.0.4",
     "@types/react": "^18.0.22",
     "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
@@ -33,6 +39,7 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.2.2",
     "monaco-editor": "^0.34.1",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.18",
@@ -42,6 +49,7 @@
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
