--- a/PLAYGROUND/package.json
+++ b/PLAYGROUND/package.json
@@ -12,25 +12,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@chakra-ui/react": "^2.3.7",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@jest/globals": "^29.2.2",
+    "@testing-library/react": "^13.4.0",
     "@types/jest-environment-puppeteer": "^5.0.3",
+    "babel-jest": "^29.2.2",
     "babel-prettier-parser": "^0.10.8",
     "express-http-proxy": "^1.6.3",
     "framer-motion": "^7.6.4",
     "jest-puppeteer": "^6.1.1",
-    "prettier": "^2.7.1",
     "puppeteer": "^19.2.2",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@monaco-editor/react": "^4.4.6",
-    "@types/prettier": "^2.6.4",
     "@types/puppeteer": "^7.0.4",
     "@types/react": "^18.0.22",
     "autoprefixer": "^10.4.12",
@@ -48,7 +45,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.2.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "webpack-cli": "^4.10.0",
