npm ready, file path search working

--- a/NPM-MODULE/dummy/tsconfig.json
+++ b/NPM-MODULE/dummy/tsconfig.json
@@ -6,16 +6,18 @@
     "esModuleInterop": true,
     "declaration": true,
     "skipLibCheck": true,
-    "outDir": "./lib",
+    //"outDir": "./lib",
     "strict": true,
     "noImplicitAny": false,
     "moduleResolution": "node",
     "sourceMap": true,
+    "baseUrl" : "dummy",
     "paths": {
-      "*": ["/node_modules/*"]
+      "*": ["/node_modules/*"],
+      "test-db/*" : ["test-db/*"]
     },
     "forceConsistentCasingInFileNames": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "server.ts", "test-db"],
   "exclude": ["node_modules"]
 }
