--- a/NPM-MODULE/dummy/package.json
+++ b/NPM-MODULE/dummy/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "a one stop shop for securing a graphQL API",
   "type": "module",
-  "main": "lib/latch.js",
-  "types": "lib/latch.d.ts",
+  "main": "server.js",
+  "types": "server.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "prestart": "npm run build",
     "start": "run-s kill-redis start-redis backend",
-    "backend": "ttab -t 'Running server' node lib/server.js",
+    "backend": "ttab -t 'Running server' node server.js",
     "kill-redis": "ttab -t 'Killing preexisting redis server' killall redis-server",
     "start-redis": "ttab -t 'Running redis server' redis-server",
-    "dev": "NODE_ENV=development nodemon lib/server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
     "test": "jest"
   },
   "repository": {
@@ -66,13 +66,12 @@
     "express-jwt": "^7.7.5",
     "fakebase": "^0.3.0",
     "find-config": "^1.0.0",
-    "find-nearest-file": "^1.1.0",
-    "findup-sync": "^5.0.0",
     "fs": "^0.0.1-security",
     "graphql": "^15.8.0",
     "graphql-middleware": "^6.1.33",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "latchql": "file:../lib",
     "monaco-editor": "^0.34.1",
     "path": "^0.12.7",
     "process": "^0.11.10",
