--- a/NPM-MODULE/lib/package.json
+++ b/NPM-MODULE/lib/package.json
@@ -1,53 +1,48 @@
 {
-  "name": "dummy-latch",
-  "version": "1.0.0",
-  "description": "a one stop shop for securing a graphQL API",
+  "name": "latchql",
+  "version": "1.0.1",
+  "description": "A one stop shop for securing a graphQL API with customizable secure authorization levels",
   "type": "module",
-  "main": "server.js",
-  "types": "server.d.ts",
+  "main": "latch-ql-npm/latch.js",
+  "types": "latch-ql-npm/latch.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "prestart": "npm run build",
     "start": "run-s kill-redis start-redis backend",
-    "backend": "ttab -t 'Running server' node server.js",
+    "backend": "ttab -t 'Running server' node lib/server.js",
     "kill-redis": "ttab -t 'Killing preexisting redis server' killall redis-server",
-    "start-redis": "ttab -t 'Running redis server' redis-server",
-    "dev": "NODE_ENV=development nodemon server.js",
-    "test": "jest"
+    "start-redis": "ttab -t 'Running redis server' redis-server"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mcphail-alex/LatchQL.git"
+    "url": "git+https://github.com/oslabs-beta/LatchQL.git"
   },
   "files": [
     "lib/**/*"
   ],
   "keywords": [
     "graphQL",
-    "depth",
+    "depth limit",
+    "rate limit",
+    "cost limit",
     "limit",
-    "rate",
-    "limit",
-    "cost",
-    "limit"
+    "latch",
+    "latchql"
   ],
   "author": "Celine Leung, Hannah Bernstein, Ray Kim, Johnjered Tolentino, Alex McPhail",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mcphail-alex/LatchQL/issues"
+    "url": "https://github.com/oslabs-beta/LatchQL/issues"
   },
-  "homepage": "https://github.com/mcphail-alex/LatchQL#readme",
+  "homepage": "https://github.com/oslabs-beta/LatchQL#readme",
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.14",
-    "@types/jest": "^29.2.1",
     "@types/node": "^16.11.68",
     "babel-jest": "^29.2.2",
     "body-parser": "^1.20.1",
-    "jest": "^29.2.2",
-    "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ttab": "^0.7.3"
@@ -55,17 +50,23 @@
   "dependencies": {
     "@graphql-codegen/typescript-resolvers": "^2.7.5",
     "@graphql-tools/schema": "^9.0.4",
+    "@types/jsonwebtoken": "^8.5.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "express-http-proxy": "^1.6.3",
     "express-jwt": "^7.7.5",
-    "fakebase": "^0.3.0",
+    "find-nearest-file": "^1.1.0",
     "fs": "^0.0.1-security",
-    "latchql": "^1.0.1",
+    "graphql": "^15.8.0",
+    "graphql-middleware": "^6.1.33",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "path": "^0.12.7",
     "process": "^0.11.10",
+    "redis": "^4.3.1",
+    "redis-server": "^1.2.2",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   }
